# event-pipes

./: .gitignore  HolaSpark.py  README.md  kafka_operations.sh  pyproject.toml  requirements.txt  runner.sh  spark.conf  test_utils.py
HolaSpark/: HolaSpark.py  log4j.properties  test_utils.py
HolaSpark/lib/: utils.py
KafkaStream/: KafkaStarter.py  kafka_starter.py  kafka_streamer.py  paired_rdd.py
KafkaStream/kafka_scripts/: runner.sh
KafkaStream/lib/: utils.py
StreamFiles/: StreamFiles.py
StreamingWC/: StreamingWC.py
lib/: utils.py
utils/: utils.py
