[tool.poetry]
name = "event-pipes"
version = "0.2.0"
description = "Event streaming with Apache Spark and Kafka"
authors = ["searchs <ola.ajibode@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
kafka = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
